# mvpoly

./: .gitignore  Makefile  README.md  configure.in
src/: Common.mk.in  Makefile  changelog.sh
src/m/: maxmodnd.m  mvpoly.m  mvpoly_unit.m  mvpoly_unit_octave.m  unit_octave.m  unit_tests.m
src/m/@dhdpoly/: README.txt
src/m/@mvpoly_cube/: compose.m  display.m  homdeg.m  minus.m  mpower.m  mtimes.m  mvpoly_cube.m  order.m  plus.m  polyval.m  subsasgn.m  subsref.m  uminus.m
src/m/@mvpoly_cube/private/: exp2sub.m  pluspad.m  polyval_cube.m  subsnorm.m
src/m/@mvpoly_dmd/: README.txt  display.m  minus.m  mvpoly_dmd.m  plus.m  polyval.m  subsasgn.m  subsref.m
src/m/@mvpoly_dmd/private/: exp2sub.m  padidx.m  pluspad.m  polyval_cube.m
src/m/@spoly/: README.txt
src/m/mvpoly_unit/: array_equal.m  test_mvpoly.m  test_mvpoly_cube.m  test_mvpoly_cube_addition.m  test_mvpoly_cube_block_assign.m  test_mvpoly_cube_compose.m  test_mvpoly_cube_element_assign.m  test_mvpoly_cube_evaluate.m  test_mvpoly_cube_homdeg.m  test_mvpoly_cube_multiply.m  test_mvpoly_cube_order.m  test_mvpoly_cube_power.m  test_mvpoly_maxmodnd.m
src/m/unit/: test_mvpoly_cube.m
src/matlab/: Makefile  README.in
src/octave/: DESCRIPTION.in  Makefile  README
src/octave/doc/: DESCRIPTION
