dnl autoconf for mvpoly
AC_INIT([mvpoly], 
	[0.90.8], 
	[J.J. Green (j.j.green@gmx.co.uk)],,
	[http://soliton.vm.bytemark.co.uk/pub/jjg/en/code/mvpoly.html])
AC_SUBST(PACKAGE_DATE, "2013-03-25")
AC_OUTPUT([src/octave/doc/DESCRIPTION:src/octave/DESCRIPTION.in
	src/matlab/doc/README:src/matlab/README.in
	src/Common.mk])

